@@ -4,10 +4,10 @@ DESCRIPTION=I2C tools for bus probing, chip dumping, register-level access helpe
 EAPI=4
 HOMEPAGE=http://www.lm-sensors.org/wiki/I2CTools
 IUSE=python
-KEYWORDS=~amd64 ~arm ~sparc ~x86
+KEYWORDS=~amd64 ~arm ~mips ~ppc ~ppc64 ~sparc ~x86
 LICENSE=GPL-2
 RDEPEND=!<sys-apps/lm_sensors-3 python? ( =dev-lang/python-2* )
 SLOT=0
 SRC_URI=http://dl.lm-sensors.org/i2c-tools/releases/i2c-tools-3.1.0.tar.bz2
 _eclasses_=distutils	34e0f373c466bb0e97ba194735f1acf2	eutils	4878e7f88afc0ba0866ac112190b0fd4	flag-o-matic	08a40a43c401c96d16477c02e56d9a64	multilib	892e597faee02a5b94eb02ab512e7622	python	305197b0aa1194fa3ef67ca21f6faa7e	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=4bc272f29998700b3cb28133ddc9dd4a
+_md5_=883df920b531eae9cef2bc2225d166b3
