@@ -3,10 +3,10 @@ DEPEND=x11-libs/libX11
 DESCRIPTION=X11 protocol trace utility
 EAPI=4
 HOMEPAGE=http://xtrace.alioth.debian.org/
-KEYWORDS=~amd64
+KEYWORDS=~amd64 ~arm ~mips ~ppc ~ppc64 ~s390 ~sh ~x86
 LICENSE=GPL-2
 RDEPEND=x11-libs/libX11
 SLOT=0
 SRC_URI=https://alioth.debian.org/frs/download.php/3694/xtrace_1.3.0.orig.tar.gz
 _eclasses_=autotools	16761a2f972abd686713e5967ff3c754	autotools-utils	5f912199ed4fdfb0bfbde29c7ac7dbdb	eutils	4878e7f88afc0ba0866ac112190b0fd4	libtool	b1c8688e60f9580bcb9bb46e08737eb1	multilib	892e597faee02a5b94eb02ab512e7622	multiprocessing	89580da5ec17ad687fcde876c542b91e	toolchain-funcs	51e6c948e72c43bcc8edc7544411c953	user	d0a4d0735a6c0183d707ca919bd72f28
-_md5_=c7b5c0ae00dd3af47c3f444142f73e0e
+_md5_=0c1c92fcff5a9b9d1fe2f294b2a567e4
