@@ -1,26 +1,26 @@
 -----BEGIN PGP SIGNED MESSAGE-----
-Hash: SHA512
+Hash: SHA256
 
-DIST i2c-tools-3.0.2.tar.bz2 62523 SHA256 0b4d6455a30a3264a60b4d3be55855d996d52ea4f162a2f04ffff378e24f98a2
-DIST i2c-tools-3.1.0.tar.bz2 66840 SHA256 960023f61de292c6dd757fcedec4bffa7dd036e8594e24b26a706094ca4c142a
+DIST i2c-tools-3.0.2.tar.bz2 62523 SHA256 0b4d6455a30a3264a60b4d3be55855d996d52ea4f162a2f04ffff378e24f98a2 SHA512 7e21660c83328a1f60cb4aa3dcc15ed0c745a426582afb48b09dca86cba0aa8e879eec59f6a029b36932c338395c10a3a88856a712f1680eba88643e6fbacf04 WHIRLPOOL c550374e8dad9d0005da9d16b50b793782dba79963fb2dfc2ca953a61af51af9d91fce227fd7b889a8c36b15352d2da904a8a8c313ddb577b5a7e0b4dc4fcf71
+DIST i2c-tools-3.1.0.tar.bz2 66840 SHA256 960023f61de292c6dd757fcedec4bffa7dd036e8594e24b26a706094ca4c142a SHA512 b9bd4f300fee9aaacdadf9ad326d250d1a99333a03b6b32edac8bdf347b88941d69ae04c4fb0684b757e4626962d405a8451eedb067eb6cc9b972c0bcbf00d68 WHIRLPOOL 944cf104266d995b2f238d2685a03b1462acfc0f4ed52e131f396a31ce6fb844c6f66cd161eb2a7f5f711658204af42c192baef0d9108050adf7c405f994835b
 EBUILD i2c-tools-3.0.2.ebuild 1366 SHA256 546f54dd146a46782c2f2d9c7700dae2df68b223bcba36340921e83fb74c3b8d SHA512 fc16e5a52303f108076d4d64d5427dfc267e9ce5974d6221e3c51e87225ea1302a5ca8d53bfd1e5f68156e081075761c5569c7e778592512edfd4e471a347758 WHIRLPOOL eb3b3dc3488fc15d03261b173cfced7fad50a0725837a3b16dc8476b66b13e3e892469822622af7197b094c8dd2f19804970efb9111aee1e6fec59a38f5c2486
-EBUILD i2c-tools-3.1.0.ebuild 1419 SHA256 2beb5c4e2abfeb3c2e6a7adc39b6ae992c9177fac6f5c74ede006677c58b79f8 SHA512 b59dc40de224ee56501cd8593c99f07b507d69ccaa92442187d039ce34bbe2acc1bec14c9a65d63cc3eca58fbd20930ce5baf04e25f96cc4beb23bff1c77e5f5 WHIRLPOOL 0e90ec9cc276346e56a2b1efbd37c304284b6ca19ed252cbbd2f1572a930cc8f6c5a4eeeb5cff4c67994d002fca6c431d252452fae62455f11666c65df54f413
-MISC ChangeLog 2247 SHA256 15a1b3ce3f4a6fa373e9f039877cf9570d6e8c52c43b6f49c5569d1568a70729 SHA512 9056c91f78bb8691dce6349dd8add85d674cc6ee26cba6636e66a93c50672b13e37bc53188f833921145c770d8d1fcfa5b9e4714e4d6f657e319f159952ead68 WHIRLPOOL dd8e20f74b228e1c5606a81341fff169cfa88d274bf5a6d156c02624c50e1dbe55d5f5ccd05eb71bdce5e39f58c77cd9b56f7710af36fb69c7c19e5f7719f02e
+EBUILD i2c-tools-3.1.0.ebuild 1440 SHA256 79d2f621505b199d1d3d0ad286f6e5bde5db1f8fa89c395acda3bd131e390498 SHA512 19b61bdf6c288afd55ccefcd765e0cacf07c221c70b5896e40eb177a9fc22b4f7d5be386f3c3e15688819d6695423ae6385e8de4be393d8d66f0e8f6ab2b5b60 WHIRLPOOL 0079a8047151e4ab2aeae7bc27be019c3c96ea6802b2686f59211ac4d60e77be523e627f01442cf6bcb4cbe5851afe3b77bdd8826bf51a1f1ee9c25ae7790110
+MISC ChangeLog 2345 SHA256 961dbfe5081d768c2dd26045bee25543155c44445a2ed563cacfb0759b7b7138 SHA512 fe21b699cfa7e89856658c37740a8c8dd28e3d4bcd091def598588947c4dac11891bb455877fe5145847be3191d3ab5a8036fcd71f0d0cd40fa1741a3882fbb3 WHIRLPOOL d5570e51c937045f194283da3627b7cd4eff02864883d9f1f4ae0092486c59d6c5ad7e1d30990c4fbd875cedb050bbbce74c62ed9ef21a722b19ac9e7ce8ca76
 MISC metadata.xml 208 SHA256 98f8aa3fb70533eeab6b09d5bc30bd8f649ec13d9b04363490082fb87bb6032e SHA512 d5a7f3cb2fe57f8d7783ba358068648b122d9f5de81a17bff61ce600e42b6487e6f7e2a62c8be95cc7021cb3ea88716824b1ad0565da922ea753bea2417b3d3d WHIRLPOOL e38a6cdef2acb3efdc182efde482593790f773ab3bb9b66cced3af47e4ab39368757e17c4352c6cacaefa338341db88c3bcc3ffcd32aabd7984c5b19051a7bb7
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQIcBAEBCgAGBQJRJ7tMAAoJELp701BxlEWfRmgQAKhpoo/Nm6GKHdcKaPoazDGR
-k5OyVJDtsYKj6OGG6MWSPiYY/nDdjbXnSNz6K4tho/lW8LpUdGDbMuhQ6aDPEB7n
-xH+lO5FQLNXa/jAJGOBGZa627zVhO3bBgU+7134/N/fkH0M7OO5zHh25aUtiHjqE
-fPViE6udwtjvAY4E8UrNBGRtKN9OoClBLHt0yZ+EaSYr2CyO+kKId91sfQveoUVM
-H7MStzvEH7xZSiXoTueb3CyZFiW9lgg0tqd3tJ4BhATsQ4DnbG/Msgb9Vht9c3yc
-hcUfQgQKgvQAOt2Z2kqY5DjaMA2emsiNkXnbS4ekqPCpcdXiZiL6fgK3JGBrFf3b
-6dqqI5GiTvSCTbtmBujMmujVDX1ncIkue04di+BMpwUdFuZ39sCfzrRX3KPFUWMS
-iYtMLlkR2xhFIdTVJ6yFgv1LDOhb8Bx0AOiBep4pHF772i42AeJTufBbybAMrM0X
-0sw5OYR3FO4WEcsMKDPN47tsc9aZVPzMxSeNAKg8APEF9j8y5l9sD1x2AO4clRBS
-KDKGnthzF2Qqgw3tGjfo03V/XHhbXlX5Q5XK8Mko0oNpTBFL2vA9RD81qZ1K7Nsf
-4PwY3fqNG1ZL5o/bhNewBcLNn5M427SFwgTn0qnOWIt5Wg3LjwLj8T79C4CQys+k
-djdmXPBIxcAbFdEnQJxz
-=mMkS
+iQIcBAEBCAAGBQJSYa9KAAoJELEHsLL7fEFWTuAQALbtHTnsNo4bCvfhL/Ut5E4o
+yScgLym+2p0cIbGbbwbKoNRW0hzt/IBA76qptbgSQZEWQjPdJU0QNPGIlbG2uphN
+57Nwx157pPkSGQPcW/vZYtrRUasgV77xrJKf32QBr8VmyoOjBIggTeYIsTOrWMzo
++lw/NZBIOpq+3rUsf545nKj6YZN2V9ScobpWUac9Y7DwB60oz9jcDOyl6T/gXKk+
+3NYIFT4rPvMBirw09FcikZmuFa8DbvQTU5xkjl2TNdqJW6Xv4LZ0jqo8XCbHoi/3
+NtZ978UoGac2nyTF+PO8WUP0j3h8fr3V26ZWUCqS/VEGtcDhAR0V7X3LwkAYPyJx
+rfE+UcxGOQRB+DYTcshtlcpR1a9t0gXGcYPemmH97FLoZjcnbBc9NSC7svNDr0w3
+jSNBrNZuGgFu+3EzuGsr4X7R60Pb2ezhiktM6ppzSD9X+qcRvThKFggYJXePdn8v
+Oz0WM1t32kxK+yWf0eRpj5X5huhLgI51qfGCayO5R9kejfiWsHqhJ7C9qMhIfaMg
+iHdh4mSa94tPsU5h6qzNrkh6391UxvxQxQMm6eJJ4TCiwKGc8Y76Fr7IFOTpQLoJ
+MxWdwIt3UY3j6/dPL4W/O66o03bzgMlICZfnf4DydRIvGOUjHkx6lVmMatC3kt8F
+kC0vsh1DjDwPF7DbeB7f
+=3yWZ
 -----END PGP SIGNATURE-----
