@@ -2,25 +2,23 @@
 Hash: SHA256
 
 DIST xtrace_1.3.0.orig.tar.gz 183803 SHA256 725d6a42d760744d053b912de3259f391f3560dc4b0a624c1f4f2ba9db35dcad
-EBUILD xtrace-1.3.0.ebuild 834 SHA256 bab3996005a78149371b0255848bb56eb9370e2b9593f1f117238da4b8ce6b36 SHA512 713225a15570edf8cef2c59f6af544f74a8942ec66691449448cb2e1bd73d373dc759e0fbde131cb9d6e77348feac93d2013b722bf821d3583e73a76467ce35c WHIRLPOOL 140fa0962eba873b5044f7e9814312c71ac729824815c376da1f5af36ac64b5f3a23da07e17076dcc922bf3a319b0f83fbf0141f069ab6801984bce1dafa9635
-MISC ChangeLog 501 SHA256 ca4ef384b40d6e47210d82859ecab92f4e81b948d5a16d280da98397e20745a6 SHA512 1abff28be6ffa48cab0308c86f936934bd65f4df87c95a3c0237cb684d10b494b260feed42c75053898733b66d3175001e9a72764fd26002e4170aa27562b879 WHIRLPOOL fa42ac39c16c6a703c139043c30213e3e4a0834db09feceab3f0e0e130581c664ea8d445fa2ce69990d28a561165dc66c5402b38d9f2cf3c57eba0b9055f5e9b
+EBUILD xtrace-1.3.0.ebuild 869 SHA256 62d655d3aca47c13465c6e5c2d43b9d581f89707b6e8a303dde2819234a8b383 SHA512 7e34eb97eee0aef084444ee1da30aa979d81a6fe766adfcdd03be3f6b0805ab0ebd778d28fb93b59446dbba73216614b9b823ce6f17d6b245b5bde5d7de5d985 WHIRLPOOL d3ad17265f09c7083b4ee17abe8d26ffc5a8b7bd05c8b69b7c3e027e69a37c724f083bc8a8d6805ec7d9c08c3bd5dc7790d41386fcce01c2f3c61eecb0dad254
+MISC ChangeLog 592 SHA256 46e69876a7fbf60bbcb1d8df6c362f288fc572d277e311c8682e6307824b43fa SHA512 85a943e94fce3be133fb2c0297ca730473b3582fa4297eb8ec1228d506c81df197123a722e1092325fa5e4c210fcaf106f32d9fc4cd5cc9c319fe887b76bdf2f WHIRLPOOL 845d891eed230c751de2d20c3ac1b284e44eb77799decd93ff5ed0f369ec2bb6855fd1b4913676fe20013596002b9ece4f84202e97f475e75e1e3f23dd5a4ae6
 MISC metadata.xml 352 SHA256 734573642f8a3efcc3d30574e9ca04ada4f5051e87c2577ecd274a5c433b859f SHA512 98cc06dde74fb4014cba321aaa450d220083e5f5fe8a140db5bacfe8dc05ca403b4060b5a674b192bcf96794c3256287884071dba78576281b0444cccc425128 WHIRLPOOL 73613d8e4feb2d659a699b2ba02dcd9dbcaeda673819fa7b06875eb0826cd6d32c077b2df542745285b37943432594db0678c6bb0f5a6dfd7013065fa536e295
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (GNU/Linux)
+Version: GnuPG v2.0.20 (GNU/Linux)
 
-iQJ8BAEBCABmBQJRReuOXxSAAAAAAC4AKGlzc3Vlci1mcHJAbm90YXRpb25zLm9w
-ZW5wZ3AuZmlmdGhob3JzZW1hbi5uZXQzNTVDNDczOUYzRjJEMTRGNDRGMzU2RkMw
-OUJGNEY1NEMyQkE3RjNDAAoJEAm/T1TCun88tiwQAL9VEp6Ca7KzxPwJp48MaL6F
-BXgObpYM51Q4QnWRNTCjsvK6y37Otj2BOEU3J7nJEv+Yuf0HMB9uiLhGFchdJ3Nw
-jrtdCtIenbo0FMVm5lb+DAEmFGt5q6nJ9Qx6p7blkdy/j3wE/sQhYDnJahZ4gGa2
-u3Y334fWQWrKm5tDtkvwH9bW9sOSc+hkyN4pRMIYyWgy3u4vr8gc8rIqxxtlQEoH
-rK5JaYgoF2kpcSGKhMU3LpqMHqFz1YGA1ND73xoVaWCT074Tr0VZFlBiQoP8/V1p
-diILRpO5PZy520uF6lUOklHgEU7yk6ZiSV2E6iQchx9TtlisaVd8wLwD+IUfcSkS
-3S+s0/+5Rod33PAlsIdryfRHD9w0N3h+OHnIqCZWag5QREJhg7bEgRJds1KQSgsB
-aSq0gfxCX3V204RGeO2C5+aVqMWeic0Hwl7rGrc2OxADdWp1QEtCyFUHJg+eKyd0
-GOfMehDzkKEAct63z8XTqr+gJGGFhFdc7FeRikx486ivFheeesTrMq+v88wLv8MB
-9QhP8mVXXWgcDT1UgzZ7MTCxS0v3PSQ9dX9B+1XkCvvQsVD9fMPvZqy/g4MVVOqh
-A3dlbUuXOGQP4pv0Kr4oDepxmoAUCqwhCsCZGiogGRA7+SHeo0G1YJYar8rDJH39
-h3pX80Md74U0CRmNn0IY
-=P5/e
+iQIcBAEBCAAGBQJSYa9JAAoJELEHsLL7fEFWk+AP/24Xo+7a/VfDNO19PCit0TVM
+OfjkbRRp7YHMIHBGNyvONis3dn8pNJGGvmpcfBtrcxZkQTLhHlaVtBZ5o0tZY7Db
+F3khYhO8+g8Y9GYC7gd+919KnaqD4DHtMAx8PcI6xUwEBec4xNtWNA2qWhi7YGJY
+BwiQmTs0ao2itEf7lBIK1wnElYxONtfDdE8MDVmAnps3ZS7KyQzQY7MPOO9PUNc+
+uWD2DfGnM71Y/mJxIqOHoEIVwEP/HLi3I/5rYU5V+wVsSVUhNrQB/u1Vz+nhR3IC
+oLBBhRpuzH90RT3cUr3vECVnv20L2/YA7XDHnLLrsYtbvjq3zau5kU+Pt4SzSAJw
+1C6UlfubjaMVX4DqzfIFb5o/2wvDIOpKKpB2ymYl2E3tuYAre7arK3lPPnfFToMk
+dber+pmRpa0WiF/KM+NtXurBwURX9rrcyW8WZ05ZFP4/oWdsmrNlU81F7I6SPE7f
+2Is+FaQxR39d36TKs8Nm6fUTWguBxole9jn9O0mu4sX9+zD2NVXqqMGiBvJXSS69
+HdbUzjHwhLWOQV+7oGKV5aMHgz+NI91OeeQwhPK6+iodapd77xCSwAOsHPhgLe1f
+k2jwU/aRSkqoVh8C6xYZyQOFVyhi0JJfXmCgETaZg88Nzmuq3GnGw+kDzX5HvP9K
+fM2t0kEglbUKc069pg+T
+=GFbY
 -----END PGP SIGNATURE-----
