@@ -1,6 +1,9 @@
 # ChangeLog for x11-misc/xtrace
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-misc/xtrace/ChangeLog,v 1.2 2013/03/17 16:13:01 hwoarang Exp $
+# $Header: /var/cvsroot/gentoo-x86/x11-misc/xtrace/ChangeLog,v 1.3 2013/10/18 21:59:32 vapier Exp $
+
+  18 Oct 2013; Mike Frysinger <vapier@gentoo.org> xtrace-1.3.0.ebuild:
+  Add more keywords.
 
   17 Mar 2013; Markos Chandras <hwoarang@gentoo.org> metadata.xml:
   Add proxy-maintainers to metadata.xml
