@@ -1,6 +1,9 @@
 # ChangeLog for sys-apps/i2c-tools
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/i2c-tools/ChangeLog,v 1.17 2013/02/22 18:41:21 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/i2c-tools/ChangeLog,v 1.18 2013/10/18 21:59:33 vapier Exp $
+
+  18 Oct 2013; Mike Frysinger <vapier@gentoo.org> i2c-tools-3.1.0.ebuild:
+  Add mor keywords.
 
   22 Feb 2013; Agostino Sarubbo <ago@gentoo.org> i2c-tools-3.0.2.ebuild:
   Stable for arm, wrt bug #458190
